# swagger.json
@@ -81,7 +81,7 @@
     "/api/gathering/{gatheringId}": {
       "get": {
         "tags": ["gathering"],
-        "summary": "Find pet by ID",
+        "summary": "Find gathering by ID",
         "description": "Returns a single gathering",
         "operationId": "getGatheringById",
         "parameters": [
@@ -616,7 +616,7 @@
   "components": {
     "schemas": {
       "Gathering": {
-        "required": ["name", "slug", "description", "upvotes", "owners", "customisation"],
+        "required": ["name", "slug", "description", "owners", "customisation"],
         "type": "object",
         "properties": {
           "name": {
@@ -630,11 +630,6 @@
           "description": {
             "type": "string",
             "example": "This is an example"
-          },
-          "upvotes": {
-            "type": "integer",
-            "format": "int64",
-            "example": 0
           },
           "owners": {
             "type": "object",
@@ -653,7 +648,7 @@
         }
       },
       "GatheringResponse": {
-        "required": ["name", "slug", "description", "upvotes", "owners", "customisation"],
+        "required": ["name", "slug", "description", "owners", "customisation"],
         "type": "object",
         "properties": {
           "id": {
@@ -672,11 +667,6 @@
           "description": {
             "type": "string",
             "example": "This is an example"
-          },
-          "upvotes": {
-            "type": "integer",
-            "format": "int64",
-            "example": 0
           },
           "owners": {
             "type": "object",
@@ -704,49 +694,22 @@
       },
       "Doc": {
         "required": [
-          "title",
+          "gatheringId",
           "slug",
           "url",
           "docUid",
-          "description",
-          "tags",
-          "upvotes",
-          "views",
-          "readeds",
-          "clicks",
-          "permissions",
-          "meta",
-          "payments",
-          "allowNotifications",
-          "hallOfFame",
-          "contentDate",
-          "content",
-          "spacesArr",
-          "archived",
-          "ads",
-          "allowForks",
-          "forks",
-          "dateNow",
-          "approved"
+          "docId"
         ],
         "type": "object",
         "properties": {
+          "gatheringId": {
+            "type": "integer",
+            "format": "int64"
+          },
+
           "title": {
             "type": "string",
             "example": "name"
-          },
-          "slug": {
-            "type": "string",
-            "example": "slug"
-          },
-          "url": {
-            "type": "string",
-            "example": "./test.js"
-          },
-          "docUid": {
-            "type": "integer",
-            "format": "int64",
-            "example": 1
           },
           "description": {
             "type": "string",
@@ -756,6 +719,30 @@
             "type": "string",
             "example": "tags"
           },
+          "approved": {
+            "type": "boolean",
+            "example": false
+          },
+
+
+          "slug": {
+            "type": "string",
+            "example": "slug"
+          },
+          "url": {
+            "type": "string",
+            "example": "./test.js"
+          },
+          "docUid": {
+            "type": "string",
+            "example": "sgwgg-fqwrsf-asfag-wqrwg"
+          },
+          "docId": {
+            "type": "integer",
+            "format": "int64",
+            "example": 1
+          },
+
           "upvotes": {
             "type": "integer",
             "format": "int64",
@@ -766,7 +753,7 @@
             "format": "int64",
             "example": 1
           },
-          "readeds": {
+          "reads": {
             "type": "integer",
             "format": "int64",
             "example": 1
@@ -776,6 +763,7 @@
             "format": "int64",
             "example": 1
           },
+
           "permissions": {
             "type": "object"
           },
@@ -785,13 +773,7 @@
           "payments": {
             "type": "object"
           },
-          "allowNotifications": {
-            "type": "boolean",
-            "example": true
-          },
-          "hallOfFame": {
-            "type": "object"
-          },
+
           "contentDate": {
             "type": "integer",
             "example": 2022
@@ -799,99 +781,27 @@
           "content": {
             "type": "string",
             "example": "content"
-          },
-          "spacesArr": {
-            "type": "string",
-            "example": ["1", "3"]
-          },
-          "archived": {
-            "type": "boolean",
-            "example": false
-          },
-          "ads": {
-            "type": "boolean",
-            "example": false
-          },
-          "allowForks": {
-            "type": "boolean",
-            "example": false
-          },
-          "forks": {
-            "type": "object",
-            "example": {
-              "original": "",
-              "arr": [
-                {
-                  "emailAddress": "",
-                  "id": ""
-                }
-              ]
-            }
-          },
-          "dateNow": {
-            "type": "integer",
-            "example": 2022
-          },
-          "approved": {
-            "type": "boolean",
-            "example": false
-          },
-          "hotScore": {
-            "type": "integer",
-            "example": 100
           }
         }
       },
       "DocResponse": {
         "required": [
-          "title",
+          "gatheringId",
           "slug",
           "url",
           "docUid",
-          "description",
-          "tags",
-          "upvotes",
-          "views",
-          "readeds",
-          "clicks",
-          "permissions",
-          "meta",
-          "payments",
-          "allowNotifications",
-          "hallOfFame",
-          "contentDate",
-          "content",
-          "spacesArr",
-          "archived",
-          "ads",
-          "allowForks",
-          "forks",
-          "dateNow",
-          "approved"
+          "docId"
         ],
         "type": "object",
         "properties": {
-          "id": {
+          "gatheringId": {
             "type": "integer",
-            "format": "int64",
-            "example": 1
+            "format": "int64"
           },
+
           "title": {
             "type": "string",
             "example": "name"
-          },
-          "slug": {
-            "type": "string",
-            "example": "slug"
-          },
-          "url": {
-            "type": "string",
-            "example": "./test.js"
-          },
-          "docUid": {
-            "type": "integer",
-            "format": "int64",
-            "example": 1
           },
           "description": {
             "type": "string",
@@ -901,6 +811,30 @@
             "type": "string",
             "example": "tags"
           },
+          "approved": {
+            "type": "boolean",
+            "example": false
+          },
+
+
+          "slug": {
+            "type": "string",
+            "example": "slug"
+          },
+          "url": {
+            "type": "string",
+            "example": "./test.js"
+          },
+          "docUid": {
+            "type": "string",
+            "example": "sgwgg-fqwrsf-asfag-wqrwg"
+          },
+          "docId": {
+            "type": "integer",
+            "format": "int64",
+            "example": 1
+          },
+
           "upvotes": {
             "type": "integer",
             "format": "int64",
@@ -911,7 +845,7 @@
             "format": "int64",
             "example": 1
           },
-          "readeds": {
+          "reads": {
             "type": "integer",
             "format": "int64",
             "example": 1
@@ -921,6 +855,7 @@
             "format": "int64",
             "example": 1
           },
+
           "permissions": {
             "type": "object"
           },
@@ -930,13 +865,7 @@
           "payments": {
             "type": "object"
           },
-          "allowNotifications": {
-            "type": "boolean",
-            "example": true
-          },
-          "hallOfFame": {
-            "type": "object"
-          },
+
           "contentDate": {
             "type": "integer",
             "example": 2022
@@ -944,54 +873,6 @@
           "content": {
             "type": "string",
             "example": "content"
-          },
-          "spacesArr": {
-            "type": "string",
-            "example": ["1", "3"]
-          },
-          "archived": {
-            "type": "boolean",
-            "example": false
-          },
-          "ads": {
-            "type": "boolean",
-            "example": false
-          },
-          "allowForks": {
-            "type": "boolean",
-            "example": false
-          },
-          "forks": {
-            "type": "object",
-            "example": {
-              "original": "",
-              "arr": [
-                {
-                  "emailAddress": "",
-                  "id": ""
-                }
-              ]
-            }
-          },
-          "dateNow": {
-            "type": "integer",
-            "example": 2022
-          },
-          "approved": {
-            "type": "boolean",
-            "example": false
-          },
-          "hotScore": {
-            "type": "integer",
-            "example": 100
-          },
-          "createdAt": {
-            "type": "string",
-            "example": "2022-08-14T20:16:06.607Z"
-          },
-          "updatedAt": {
-            "type": "string",
-            "example": "2022-08-14T20:25:52.052Z"
           }
         }
       },
